fix overflowing credits

--- a/style.scss
+++ b/style.scss
@@ -836,6 +836,7 @@ footer {
   color: $bgcol;
   font-size: 0.85em;
   line-height: 1.5;
+  flex-wrap: wrap;
 
   display: flex;
 
